--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LexiGuard</title>
-  <!-- Tailwind should be built locally (removed CDN for production/dev) -->
+    <!-- Tailwind should be built locally (removed CDN for production/dev) -->
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
